# qbtiles

./: .gitignore  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: docs.yml
demo-src/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
demo-src/population/: index.html
demo-src/range-request/: index.html
demo-src/tiles/: index.html
demo-src/viewer/: index.html
docs/: TODO.md  api-reference.md  architecture.ko.md  architecture.md  benchmark-results.ko.md  benchmark-results.md  comparison.ko.md  comparison.md  data-container.md  format-spec.md  future-directions.md  index.ko.md  index.md  quadkey-encoding.ko.md  quadkey-encoding.md
docs/examples/: 01_xyz_tiles.ipynb  01_xyz_tiles.md  02_bitmask_as_data_container.ipynb  02_custom_crs.md  03_web_client.md  05_compare_real_pmtiles.ipynb  05_compare_real_pmtiles.md  popu_utils.py
docs/ko/: api-reference.md  architecture.md  benchmark-results.md  comparison.md  data-container.md  examples-bitmask.md  examples-compare-pmtiles.md  examples-web-client.md  examples-xyz-tiles.md  format-spec.md  index.md  quadkey-encoding.md
examples/: 01_xyz_tiles.py  02_custom_crs.py  03_web_client.html  04_compare_pmtiles.py  05_compare_real_pmtiles.ipynb  korea_tiles.qbt  tileid_encoder.cp312-win_amd64.pyd
src/cpp/: CMakeLists.txt  encoder.cpp  encoder_pybind.cpp
src/python/: __init__.py  qbtiles.py
src/typescript/: bitmask-index.ts  custom-crs.ts  (+6 more)
tests/: benchmark_formats.py  test_api.py  test_api_ts.mjs  test_geotiff.py  test_roundtrip.py
(+22 files in other folders)
