[build-system]
requires = ["setuptools>=68.0,<75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qbtiles"
version = "0.7.0"
description = "Quadkey Bitmask Tiles — cloud-optimized tile index format"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "vuski"}]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords = ["tiles", "quadkey", "pmtiles", "gis", "spatial-index"]

[project.urls]
Homepage = "https://github.com/vuski/qbtiles"
Documentation = "https://vuski.github.io/qbtiles/"

[tool.setuptools]
packages = ["qbtiles"]
package-dir = {"qbtiles" = "src/python"}
